Fix Admin Sidebar Collapse Issue  (#345)
* changes

* Fix code style issues with Prettier

--- a/simplq/src/styles/adminPage.module.scss
+++ b/simplq/src/styles/adminPage.module.scss
@@ -21,13 +21,24 @@
     }
   }
 
-  .expand-icon {
-    margin-left: 2rem;
-    cursor: pointer;
-  }
+  .collapsable {
+    display: flex;
+    flex-direction: column;
+    .collapsable-header {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      .expand-icon {
+        margin-left: 2rem;
+        cursor: pointer;
+      }
 
-  .expand-icon-opened {
-    transform: rotate(180deg);
+      .expand-icon-opened {
+        transform: rotate(180deg);
+      }
+    }
+    .collapsable-content {
+    }
   }
 }
 .admin-join-queue-form {
